@@ -132,7 +132,7 @@
  *      Kay Gürtzig     2020-03-17  New messages for issues #828 (ArrangerIndex) and #837 (ExportOptionDialoge)
  *      Kay Gürtzig     2020-12-14  Enh. #704: New top-level section "DiagramController"
  *      Kay Gürtzig     2021-01-23  Enh. #714: InputBox.chkShowFinally added
- *      Kay Gürtzig     2021-01-25  Enh. #915: New class InputBoxCase added
+ *      Kay Gürtzig     2021-01-25  Enh. #915: Messages for new class InputBoxCase added
  *
  ******************************************************************************************************
  *
@@ -566,6 +566,7 @@ Menu.hint26.3.text=Ahora puedes p.ej. exportar tu diagrama a un código: → Men
 Menu.hint26.4.text=Ahora puedes p.ej. exportar tu diagrama como imágen: → Menú "%1 ► %2 ► %3"
 Menu.error27.text=Algunos valores comparativos @c (p.ej. «%») no parecen constantes integrales.
 Menu.error28.text=!Valores comparativos (%) ocurren varias veces o en más de un ramo del elemento @c!
+Menu.error29.text=El tipo de la expresión de selección «%» es estructurado, pues no sirve para @c.
 Menu.errorLineReference.text= (línea %)
 
 -----[ AnalyserPreferences ]-----
@@ -601,6 +602,7 @@ AnalyserPreferences.checkboxes.25.text=Recomendaciones para primeras instruccion
 AnalyserPreferences.checkboxes.26.text=Guía corta hacia un algoritmo "Hola mundo"
 AnalyserPreferences.checkboxes.27.text=Comprobar que los selectores de @c son constantes integrales.
 AnalyserPreferences.checkboxes.28.text=Comprobar que las listas selectoras de @c son disjuntas.
+AnalyserPreferences.checkboxes.29.text=Comprobar que el valor de selectión en elementos @c no es de un tipo estructurado.
 AnalyserPreferences.lblDrawWarningSign.text=Dibuja señal de advertencia en elementos afectados
 AnalyserPreferences.okButton.text=Aceptar
 
